--- a/app/src/main/res/layout/fragment_content_menu.xml
+++ b/app/src/main/res/layout/fragment_content_menu.xml
@@ -3,12 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
-    <android.support.v4.view.ViewPager
+<com.app.yangyang.zhbj.view.NoScrollViewPager
         android:id="@+id/vp_content"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"></android.support.v4.view.ViewPager>
+        android:layout_weight="1"></com.app.yangyang.zhbj.view.NoScrollViewPager>
 
     <RadioGroup
 
