--- a/app/src/main/res/layout/tab_detail_pager.xml
+++ b/app/src/main/res/layout/tab_detail_pager.xml
@@ -1,43 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="200dp">
-        <com.app.yangyang.zhbj.view.TopNewsViewPager
-            android:id="@+id/vp_news"
-            android:layout_width="match_parent"
-            android:background="#565656"
-            android:layout_height="200dp">
-        </com.app.yangyang.zhbj.view.TopNewsViewPager>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:padding="5dp"
-            android:background="#a000">
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#fff"
-                android:textSize="16sp"
-                android:text="新闻标题"/>
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
-
-        </RelativeLayout>
-
-
-
-    </RelativeLayout>
-    <ListView
+    <com.app.yangyang.zhbj.view.RefreshListView
         android:id="@+id/lv_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-    </ListView>
+        android:layout_weight="1"
+        android:cacheColorHint="@android:color/white"></com.app.yangyang.zhbj.view.RefreshListView>
 
 </LinearLayout>
