--- a/app/src/main/res/layout/base_pager.xml
+++ b/app/src/main/res/layout/base_pager.xml
@@ -24,7 +24,18 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
-            android:background="@drawable/img_menu"/>
+            android:background="@null"
+            android:src="@drawable/img_menu"/>
+        <ImageButton
+            android:id="@+id/btn_photo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="5dp"
+            android:layout_alignParentRight="true"
+            android:visibility="invisible"
+            android:background="@null"
+            android:src="@drawable/icon_pic_list_type"/>
     </RelativeLayout>
 
     <FrameLayout
